# public-ai-solana-program

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json
programs/public-ai-solana-program/: Cargo.toml
programs/public-ai-solana-program/src/: errors.rs  lib.rs
programs/public-ai-solana-program/src/instructions/: accept_job.rs  create_task.rs  initialize.rs  mod.rs
programs/public-ai-solana-program/src/state/: mod.rs  task.rs
tests/: public-ai-solana-program.ts
