[package]
name = "public-ai-solana-program"
version = "0.1.0"
description = "PublicAI task reward distribute program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "public_ai_solana_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
